# chatjimmy-api

./: README.md  pyproject.toml
src/chatjimmy/: __init__.py  client.py
