[project]
name = "chatjimmy"
version = "0.1.0"
description = "Unofficial Python wrapper for the chatjimmy.ai API (Taalas HC1 inference)"
requires-python = ">=3.10"
license = "MIT"
keywords = ["taalas", "llama", "llm", "inference", "chatjimmy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/0xMH/chatjimmy-api"
Issues = "https://github.com/0xMH/chatjimmy-api/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatjimmy"]
